infra/identity/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.4
          args: ["start-dev", "--metrics-enabled=true"]
          resources:
            limits:
              cpu: "1"
              memory: "2Gi" # Adjust based on your requirements
            requests:
              cpu: "0.5"
              memory: "1Gi" # Adjust based on your requirements
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
